// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThreeIdProvider .create Create instance with seed & v03ID 1`] = `
Object {
  "@context": "https://w3id.org/did/v1",
  "authentication": Array [
    Object {
      "publicKey": "did:3:bafyreidv6yl2bbmuslkqby45hdn6sd6ha22zlolxjjxxz4suuwfqpezewu#awRV3csnRHjJpWt",
      "type": "Secp256k1SignatureAuthentication2018",
    },
  ],
  "id": "did:3:bafyreidv6yl2bbmuslkqby45hdn6sd6ha22zlolxjjxxz4suuwfqpezewu",
  "keyAgreement": Array [
    Object {
      "controller": "did:3:bafyreidv6yl2bbmuslkqby45hdn6sd6ha22zlolxjjxxz4suuwfqpezewu",
      "id": "did:3:bafyreidv6yl2bbmuslkqby45hdn6sd6ha22zlolxjjxxz4suuwfqpezewu#38JciKPaAyHMu5r",
      "publicKeyBase58": "AVgughn1R4BTrRL2gP6ZmVAhWrzTHRx9jjbi5iKkeXK6",
      "type": "X25519KeyAgreementKey2019",
    },
  ],
  "publicKey": Array [
    Object {
      "controller": "did:3:bafyreidv6yl2bbmuslkqby45hdn6sd6ha22zlolxjjxxz4suuwfqpezewu",
      "id": "did:3:bafyreidv6yl2bbmuslkqby45hdn6sd6ha22zlolxjjxxz4suuwfqpezewu#awRV3csnRHjJpWt",
      "publicKeyBase58": "jidgTminnrVUvPAFM3E1w1MYwN2cZ2ttZ7s5V5cc6LfA",
      "type": "Secp256k1VerificationKey2018",
    },
    Object {
      "controller": "did:3:bafyreidv6yl2bbmuslkqby45hdn6sd6ha22zlolxjjxxz4suuwfqpezewu",
      "id": "did:3:bafyreidv6yl2bbmuslkqby45hdn6sd6ha22zlolxjjxxz4suuwfqpezewu#38JciKPaAyHMu5r",
      "publicKeyBase58": "AVgughn1R4BTrRL2gP6ZmVAhWrzTHRx9jjbi5iKkeXK6",
      "type": "Curve25519EncryptionPublicKey",
    },
  ],
}
`;

exports[`ThreeIdProvider .create Creates instance from seed 1`] = `
Object {
  "@context": "https://w3id.org/did/v1",
  "authentication": Array [
    Object {
      "publicKey": "did:3:kjzl6cwe1jw148alhwpftxgyonvf6ne1yj9480rrxqtdri7fuxljd4m8brmh25y#DAyzBZtFSbmcYwd",
      "type": "Secp256k1SignatureAuthentication2018",
    },
  ],
  "id": "did:3:kjzl6cwe1jw148alhwpftxgyonvf6ne1yj9480rrxqtdri7fuxljd4m8brmh25y",
  "keyAgreement": Array [
    Object {
      "controller": "did:3:kjzl6cwe1jw148alhwpftxgyonvf6ne1yj9480rrxqtdri7fuxljd4m8brmh25y",
      "id": "did:3:kjzl6cwe1jw148alhwpftxgyonvf6ne1yj9480rrxqtdri7fuxljd4m8brmh25y#zdTJrUZnZiEUpZ7",
      "publicKeyBase58": "H6eKDZXoFYnZK7LmCETqNrdJSs3D1PTJRsktJ74hmSnM",
      "type": "X25519KeyAgreementKey2019",
    },
  ],
  "publicKey": Array [
    Object {
      "controller": "did:3:kjzl6cwe1jw148alhwpftxgyonvf6ne1yj9480rrxqtdri7fuxljd4m8brmh25y",
      "id": "did:3:kjzl6cwe1jw148alhwpftxgyonvf6ne1yj9480rrxqtdri7fuxljd4m8brmh25y#DAyzBZtFSbmcYwd",
      "publicKeyBase58": "sa7zneXscD3PdWhAopVWoN8sNMxDCf8T4Fp5x6veQ55u",
      "type": "Secp256k1VerificationKey2018",
    },
    Object {
      "controller": "did:3:kjzl6cwe1jw148alhwpftxgyonvf6ne1yj9480rrxqtdri7fuxljd4m8brmh25y",
      "id": "did:3:kjzl6cwe1jw148alhwpftxgyonvf6ne1yj9480rrxqtdri7fuxljd4m8brmh25y#zdTJrUZnZiEUpZ7",
      "publicKeyBase58": "H6eKDZXoFYnZK7LmCETqNrdJSs3D1PTJRsktJ74hmSnM",
      "type": "Curve25519EncryptionPublicKey",
    },
  ],
}
`;
